Modification des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <meta name="viewport" content="width=device-width" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -247,7 +247,9 @@
     </section>
     <section id="Activites" class="activites">
         <h3>Activités à Marseille</h3>
+
         <div class="bloc_activites">
+
             <div class="cubeactivites">
                 <div class="imgactivite1"></div>
                 <div class="hauteurtitre">
@@ -297,6 +299,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+
         </div>
     </section>
     <footer>
