modification des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="LienNavHébergement"><a class="ColorLien1" href="#Hébergements">Hébergements</a></div>
                 <div class="LienNavActivités"><a class="ColorLien2" href="#Activites">Activités</a></div>
             </div>
-            <div class="LienNavSinscrire"><a class="ColorLien1" href="#">S'inscrire</a></div>
+            <button class="LienNavSinscrire" type="button">S'inscrire</button>
         </div>
 
 
@@ -56,6 +56,7 @@
                 <div>
                     <h3 class="MargeTitre">Filtres</h3>
                 </div>
+
                 <div id="Filtres">
                     <div class="BlocEconomique">
                         <div class="FiltreTexteIcone">
@@ -82,22 +83,29 @@
 
                 </div>
             </div>
+
             <div class="Info">
                 <div class="IconeInfo"><i class="fas fa-info"></i></div>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
+            </div>
             </div>
 
         </section>
     </header>
     <section id="Hébergements" class="BlocHébergement_Populaire">
+
         <div class="BlocHébergement">
 
-            <h3>Hébergements à Marseille</h3>
+            <div class="titreHébergement">
+                <h3>Hébergements à Marseille</h3>
+            </div>
             <div class="BlocHébergement1">
                 <div class="CubeHébergement">
                     <div class="ImgHébergement1"></div>
                     <div class="CubeDétailHébergement">
-                        <h3>Auberge de la cannebière</h3>
+                        <div>
+                            <h3>Auberge de la cannebière</h3>
+                        </div>
                         <p>Nuit àpartir de 25€</p>
                         <div>
                             <i class="fas fa-star color"></i>
@@ -243,10 +251,13 @@
 
 
         </div>
+        </div>
 
     </section>
     <section id="Activites" class="activites">
-        <h3>Activités à Marseille</h3>
+        <div>
+            <h3>Activités à Marseille</h3>
+        </div>
 
         <div class="bloc_activites">
 
