Modification des fichiers css et html

--- a/index.html
+++ b/index.html
@@ -259,58 +259,70 @@
             <h3>Activités à Marseille</h3>
         </div>
 
+
         <div class="bloc_activites">
-
-            <div class="cubeactivites">
-                <div class="imgactivite1"></div>
-                <div class="hauteurtitre">
-                    <h3>Vieux port</h3>
-                </div>
-            </div>
-
-
-            <div class="bloc_activites1">
-                <div class="cubeactivites2356">
-                    <div class="imgactivite2"></div>
+            <div class="tab1">
+                <div class="cubeactivites">
+                    <div class="imgactivite1"></div>
                     <div class="hauteurtitre">
-                        <h3>Fort de Pomègues</h3>
+                        <h3>Vieux port</h3>
                     </div>
                 </div>
 
 
-                <div class="cubeactivites2356">
-                    <div class="imgactivite3"></div>
-                    <div class="hauteurtitre">
-                        <h3>Îles du Frioul</h3>
+                <div class="bloc_activites1">
+
+
+
+                    <div class="cubeactivites2356">
+                        <div class="imgactivite2"></div>
+                        <div class="hauteurtitre">
+                            <h3>Fort de Pomègues</h3>
+                        </div>
+                    </div>
+
+
+                    <div class="cubeactivites2356">
+                        <div class="imgactivite3"></div>
+                        <div class="hauteurtitre">
+                            <h3>Îles du Frioul</h3>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="cubeactivites">
-                <div class="imgactivite4"></div>
-                <div class="hauteurtitre">
-                    <h3>Parc National des Calanques</h3>
-                </div>
-            </div>
 
-
-            <div class="bloc_activites2">
-                <div class="cubeactivites2356">
-                    <div class="imgactivite5"></div>
+            <div class="tab2">
+                <div class="cubeactivites">
+                    <div class="imgactivite4"></div>
                     <div class="hauteurtitre">
-                        <h3>Notre-Dame-De-La-Garde</h3>
+                        <h3>Parc National des Calanques</h3>
                     </div>
                 </div>
 
 
-                <div class="cubeactivites2356">
-                    <div class="imgactivite6"></div>
-                    <div class="hauteurtitre">
-                        <h3>Parc Longchamp</h3>
+
+                <div class="bloc_activites2">
+
+
+                    <div class="cubeactivites2356">
+                        <div class="imgactivite5"></div>
+                        <div class="hauteurtitre">
+                            <h3>Notre-Dame-De-La-Garde</h3>
+                        </div>
+                    </div>
+
+
+                    <div class="cubeactivites2356">
+                        <div class="imgactivite6"></div>
+                        <div class="hauteurtitre">
+                            <h3>Parc Longchamp</h3>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+
+
 
         </div>
     </section>
