Modification des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="LienNavHébergement"><a class="ColorLien1" href="#Hébergements">Hébergements</a></div>
                 <div class="LienNavActivités"><a class="ColorLien2" href="#Activites">Activités</a></div>
             </div>
-            <button class="LienNavSinscrire" type="button">S'inscrire</button>
+            <a href="s'inscrire>"><button class="LienNavSinscrire" type="button">S'inscrire</button></a>
         </div>
 
 
@@ -206,45 +206,47 @@
                 <h3>Les plus populaires</h3>
                 <i class="fas fa-chart-line fa-2x"></i>
             </div>
-            <div class="CubePopulaire1">
-                <div class="ImgPopulaire1"></div>
-                <div class="CubeDétailPopulaire">
-                    <h3>Hôtel Le solleil du matin</h3>
-                    <p>Nuit à partir de 128€</p>
-                    <div>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
+            <div class="tabpopulaire">
+                <div class="CubePopulaire1">
+                    <div class="ImgPopulaire1"></div>
+                    <div class="CubeDétailPopulaire">
+                        <h3>Hôtel Le solleil du matin</h3>
+                        <p>Nuit à partir de 128€</p>
+                        <div>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="CubePopulaire1">
-                <div class="ImgPopulaire2"></div>
-                <div class="CubeDétailPopulaire">
-                    <h3>Au Coeur de l'eau Chambre d'hôtes </h3>
-                    <p>Nuit à partir de 71€</p>
-                    <div>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color1"></i>
+                <div class="CubePopulaire1">
+                    <div class="ImgPopulaire2"></div>
+                    <div class="CubeDétailPopulaire">
+                        <h3>Au Coeur de l'eau Chambre d'hôtes </h3>
+                        <p>Nuit à partir de 71€</p>
+                        <div>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color1"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="CubePopulaire">
-                <div class="ImgPopulaire3"></div>
-                <div class="CubeDétailPopulaire">
-                    <h3>Hôtel Tout bleu et Blanc</h3>
-                    <p>Nuit à partir de 68€</p>
-                    <div>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color"></i>
-                        <i class="fas fa-star color1"></i>
+                <div class="CubePopulaire">
+                    <div class="ImgPopulaire3"></div>
+                    <div class="CubeDétailPopulaire">
+                        <h3>Hôtel Tout bleu et Blanc</h3>
+                        <p>Nuit à partir de 68€</p>
+                        <div>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color"></i>
+                            <i class="fas fa-star color1"></i>
+                        </div>
                     </div>
                 </div>
             </div>
