Modification des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -257,9 +257,11 @@
 
     </section>
     <section id="Activites" class="activites">
-        <div>
+
+        <div class="TitreBlocActivite">
             <h3>Activités à Marseille</h3>
         </div>
+
 
 
         <div class="bloc_activites">
