Modification des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="LienNavHébergement"><a class="ColorLien1" href="#Hébergements">Hébergements</a></div>
                 <div class="LienNavActivités"><a class="ColorLien2" href="#Activites">Activités</a></div>
             </div>
-            <a href="s'inscrire>"><button class="LienNavSinscrire" type="button">S'inscrire</button></a>
+            <button class="LienNavSinscrire s'inscrire" type="button">S'inscrire</button>
         </div>
 
 
@@ -88,7 +88,7 @@
                 <div class="IconeInfo"><i class="fas fa-info"></i></div>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
-            </div>
+
 
         </section>
     </header>
@@ -253,7 +253,7 @@
 
 
         </div>
-        </div>
+
 
     </section>
     <section id="Activites" class="activites">
