Modification des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
         <div class="bloc_activites">
             <div class="tab1">
-                <div class="cubeactivites">
+                <div class="cubeactivites img1">
                     <div class="imgactivite1"></div>
                     <div class="hauteurtitre">
                         <h3>Vieux port</h3>
@@ -297,7 +297,7 @@
 
 
             <div class="tab2">
-                <div class="cubeactivites">
+                <div class="cubeactivites ">
                     <div class="imgactivite4"></div>
                     <div class="hauteurtitre">
                         <h3>Parc National des Calanques</h3>
