Modification des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 
     </nav>
     <header>
-        <section>
+        <section class="center">
 
             <div class="ResponsiveMobile">
-                <h1 class="SloganIntro">Trouvez votre Hébergement pour des vacances de rêve</h1>
+                <div class="SloganIntro">
+                    <h1>Trouvez votre Hébergement pour des vacances de rêve</h1>
+                </div>
                 <p>En plein centre ville ou en pleine nature</p>
             </div>
 
