--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div>
                             <h3>Auberge de la cannebière</h3>
                         </div>
-                        <p>Nuit àpartir de 25€</p>
+                        <p>Nuit àpartir de <strong>25€</strong></p>
                         <div>
                             <i class="fas fa-star color"></i>
                             <i class="fas fa-star color"></i>
@@ -122,7 +122,7 @@
                     <div class="ImgHébergement2"></div>
                     <div class="CubeDétailHébergement">
                         <h3>Hôtel du port</h3>
-                        <p>Nuit àpartir de 52€</p>
+                        <p>Nuit àpartir de 52<strong>€</strong></p>
                         <div>
                             <i class="fas fa-star color"></i>
                             <i class="fas fa-star color"></i>
@@ -136,7 +136,7 @@
                     <div class="ImgHébergement3"></div>
                     <div class="CubeDétailHébergement">
                         <h3>Hôtel Les mouettes</h3>
-                        <p>Nuit àpartir de 76€</p>
+                        <p>Nuit àpartir de 76<strong>€</strong></p>
                         <div>
                             <i class="fas fa-star color"></i>
                             <i class="fas fa-star color"></i>
@@ -152,7 +152,7 @@
                     <div class="ImgHébergement4"></div>
                     <div class="CubeDétailHébergement">
                         <h3>Hôtel de la mer</h3>
-                        <p>Nuit àpartir de 46€</p>
+                        <p>Nuit àpartir de 46<strong>€</strong></p>
                         <div>
                             <i class="fas fa-star color"></i>
                             <i class="fas fa-star color"></i>
@@ -167,7 +167,7 @@
                     <div class="CubeDétailHébergement">
                         <h3>Auberge Le Panier</h3>
 
-                        <p>Nuit àpartir de 52€</p>
+                        <p>Nuit àpartir de <strong>23€</strong></p>
                         <div>
                             <i class="fas fa-star color"></i>
                             <i class="fas fa-star color"></i>
@@ -183,7 +183,7 @@
                     <div class="CubeDétailHébergement">
                         <h3>Hôtel chez Amina</h3>
 
-                        <p>Nuit àpartir de 76€</p>
+                        <p>Nuit àpartir de 96<strong>€</strong></p>
                         <div>
                             <i class="fas fa-star color"></i>
                             <i class="fas fa-star color"></i>
@@ -213,7 +213,7 @@
                     <div class="ImgPopulaire1"></div>
                     <div class="CubeDétailPopulaire">
                         <h3>Hôtel Le solleil du matin</h3>
-                        <p>Nuit à partir de 128€</p>
+                        <p>Nuit à partir de 128<strong>€</strong></p>
                         <div>
                             <i class="fas fa-star color"></i>
                             <i class="fas fa-star color"></i>
@@ -227,7 +227,7 @@
                     <div class="ImgPopulaire2"></div>
                     <div class="CubeDétailPopulaire">
                         <h3>Au Coeur de l'eau Chambre d'hôtes </h3>
-                        <p>Nuit à partir de 71€</p>
+                        <p>Nuit à partir de 71<strong>€</strong></p>
                         <div>
                             <i class="fas fa-star color"></i>
                             <i class="fas fa-star color"></i>
@@ -241,7 +241,7 @@
                     <div class="ImgPopulaire3"></div>
                     <div class="CubeDétailPopulaire">
                         <h3>Hôtel Tout bleu et Blanc</h3>
-                        <p>Nuit à partir de 68€</p>
+                        <p>Nuit à partir de 68<strong>€</strong></p>
                         <div>
                             <i class="fas fa-star color"></i>
                             <i class="fas fa-star color"></i>
