Modification du fichier css

--- a/index.html
+++ b/index.html
@@ -95,165 +95,167 @@
         </section>
     </header>
     <section id="Hébergements" class="BlocHébergement_Populaire">
+        <div class="page">
 
-        <div class="BlocHébergement">
+            <div class="BlocHébergement">
 
-            <div class="titreHébergement">
-                <h2>Hébergements à Marseille</h2>
-            </div>
-            <div class="BlocHébergement1">
-                <div class="CubeHébergement">
-                    <div class="ImgHébergement1"></div>
-                    <div class="CubeDétailHébergement">
-                        <div>
-                            <h3>Auberge de la cannebière</h3>
+                <div class="titreHébergement">
+                    <h2>Hébergements à Marseille</h2>
+                </div>
+                <div class="BlocHébergement1">
+                    <div class="CubeHébergement">
+                        <div class="ImgHébergement1"></div>
+                        <div class="CubeDétailHébergement">
+                            <div>
+                                <h3>Auberge de la cannebière</h3>
+                            </div>
+                            <p>Nuit àpartir de <strong>25€</strong></p>
+                            <div>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color1"></i>
+                            </div>
                         </div>
-                        <p>Nuit àpartir de <strong>25€</strong></p>
-                        <div>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color1"></i>
+                    </div>
+                    <div class="CubeHébergement">
+                        <div class="ImgHébergement2"></div>
+                        <div class="CubeDétailHébergement">
+                            <h3>Hôtel du port</h3>
+                            <p>Nuit àpartir de 52<strong>€</strong></p>
+                            <div>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="CubeHébergement">
+                        <div class="ImgHébergement3"></div>
+                        <div class="CubeDétailHébergement">
+                            <h3>Hôtel Les mouettes</h3>
+                            <p>Nuit àpartir de 76<strong>€</strong></p>
+                            <div>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color1"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="CubeHébergement">
-                    <div class="ImgHébergement2"></div>
-                    <div class="CubeDétailHébergement">
-                        <h3>Hôtel du port</h3>
-                        <p>Nuit àpartir de 52<strong>€</strong></p>
-                        <div>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
+                <div class="BlocHébergement2">
+                    <div class="CubeHébergement">
+                        <div class="ImgHébergement4"></div>
+                        <div class="CubeDétailHébergement">
+                            <h3>Hôtel de la mer</h3>
+                            <p>Nuit àpartir de 46<strong>€</strong></p>
+                            <div>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color1"></i>
+                                <i class="fas fa-star color1"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="CubeHébergement">
-                    <div class="ImgHébergement3"></div>
-                    <div class="CubeDétailHébergement">
-                        <h3>Hôtel Les mouettes</h3>
-                        <p>Nuit àpartir de 76<strong>€</strong></p>
-                        <div>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color1"></i>
+                    <div class="CubeHébergement">
+                        <div class="ImgHébergement5"></div>
+                        <div class="CubeDétailHébergement">
+                            <h3>Auberge Le Panier</h3>
+
+                            <p>Nuit àpartir de <strong>23€</strong></p>
+                            <div>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color1"></i>
+                            </div>
+
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="BlocHébergement2">
-                <div class="CubeHébergement">
-                    <div class="ImgHébergement4"></div>
-                    <div class="CubeDétailHébergement">
-                        <h3>Hôtel de la mer</h3>
-                        <p>Nuit àpartir de 46<strong>€</strong></p>
-                        <div>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color1"></i>
-                            <i class="fas fa-star color1"></i>
+                    <div class="CubeHébergement">
+                        <div class="ImgHébergement6"></div>
+                        <div class="CubeDétailHébergement">
+                            <h3>Hôtel chez Amina</h3>
+
+                            <p>Nuit àpartir de 96<strong>€</strong></p>
+                            <div>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                            </div>
+
                         </div>
                     </div>
+
+
+
                 </div>
-                <div class="CubeHébergement">
-                    <div class="ImgHébergement5"></div>
-                    <div class="CubeDétailHébergement">
-                        <h3>Auberge Le Panier</h3>
-
-                        <p>Nuit àpartir de <strong>23€</strong></p>
-                        <div>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color1"></i>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="CubeHébergement">
-                    <div class="ImgHébergement6"></div>
-                    <div class="CubeDétailHébergement">
-                        <h3>Hôtel chez Amina</h3>
-
-                        <p>Nuit àpartir de 96<strong>€</strong></p>
-                        <div>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                        </div>
-
-                    </div>
-                </div>
-
-
-
-            </div>
-            <div class="Afficherplus">Afficher plus</div>
-        </div>
-
-
-
-        <div class="BlocPopulaire">
-            <div class="TitreBlocPopulaire">
-                <h2>Les plus populaires</h2>
-                <i class="fas fa-chart-line fa-2x"></i>
-            </div>
-            <div class="tabpopulaire">
-                <div class="CubePopulaire1">
-                    <div class="ImgPopulaire1"></div>
-                    <div class="CubeDétailPopulaire">
-                        <h3>Hôtel Le solleil du matin</h3>
-                        <p>Nuit à partir de 128<strong>€</strong></p>
-                        <div>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="CubePopulaire1">
-                    <div class="ImgPopulaire2"></div>
-                    <div class="CubeDétailPopulaire">
-                        <h3>Au Coeur de l'eau Chambre d'hôtes </h3>
-                        <p>Nuit à partir de 71<strong>€</strong></p>
-                        <div>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color1"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="CubePopulaire">
-                    <div class="ImgPopulaire3"></div>
-                    <div class="CubeDétailPopulaire">
-                        <h3>Hôtel Tout bleu et Blanc</h3>
-                        <p>Nuit à partir de 68<strong>€</strong></p>
-                        <div>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color"></i>
-                            <i class="fas fa-star color1"></i>
-                        </div>
-                    </div>
-                </div>
+                <div class="Afficherplus">Afficher plus</div>
             </div>
 
 
+
+            <div class="BlocPopulaire">
+                <div class="TitreBlocPopulaire">
+                    <h2>Les plus populaires</h2>
+                    <i class="fas fa-chart-line fa-2x"></i>
+                </div>
+                <div class="tabpopulaire">
+                    <div class="CubePopulaire1">
+                        <div class="ImgPopulaire1"></div>
+                        <div class="CubeDétailPopulaire">
+                            <h3>Hôtel Le solleil du matin</h3>
+                            <p>Nuit à partir de 128<strong>€</strong></p>
+                            <div>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="CubePopulaire1">
+                        <div class="ImgPopulaire2"></div>
+                        <div class="CubeDétailPopulaire">
+                            <h3>Au Coeur de l'eau Chambre d'hôtes </h3>
+                            <p>Nuit à partir de 71<strong>€</strong></p>
+                            <div>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color1"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="CubePopulaire">
+                        <div class="ImgPopulaire3"></div>
+                        <div class="CubeDétailPopulaire">
+                            <h3>Hôtel Tout bleu et Blanc</h3>
+                            <p>Nuit à partir de 68<strong>€</strong></p>
+                            <div>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color"></i>
+                                <i class="fas fa-star color1"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
         </div>
 
 
@@ -330,6 +332,7 @@
 
 
 
+        </div>
         </div>
     </section>
     <footer>
