--- a/index.html
+++ b/index.html
@@ -115,9 +115,14 @@
         <div class="titreHébergement">
           <h2>Hébergements à Marseille</h2>
         </div>
-        <div class="BlocHébergement1">
+        <div class="BlocHébergement1_2">
           <div class="CubeHébergement">
-            <div class="ImgHébergement1"></div>
+            <img
+              class="ImgHébergement"
+              src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+              alt="Image Auberge de la cannebière"
+            />
+
             <div class="CubeDétailHébergement">
               <div>
                 <h3>Auberge de la cannebière</h3>
@@ -133,7 +138,11 @@
             </div>
           </div>
           <div class="CubeHébergement">
-            <div class="ImgHébergement2"></div>
+            <img
+              class="ImgHébergement"
+              src="hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+              alt="Image Hotel du port"
+            />
             <div class="CubeDétailHébergement">
               <h3>Hôtel du port</h3>
               <p>Nuit àpartir de 52<strong>€</strong></p>
@@ -147,10 +156,14 @@
             </div>
           </div>
           <div class="CubeHébergement">
-            <div class="ImgHébergement3"></div>
+            <img
+              class="ImgHébergement"
+              src="hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+              alt="Image Hôtel Les mouettes"
+            />
             <div class="CubeDétailHébergement">
               <h3>Hôtel Les mouettes</h3>
-              <p>Nuit àpartir de 76<strong>€</strong></p>
+              <p>Nuit à partir de 76<strong>€</strong></p>
               <div>
                 <i class="fas fa-star color"></i>
                 <i class="fas fa-star color"></i>
@@ -161,9 +174,13 @@
             </div>
           </div>
         </div>
-        <div class="BlocHébergement2">
+        <div class="BlocHébergement1_2">
           <div class="CubeHébergement">
-            <div class="ImgHébergement4"></div>
+            <img
+              class="ImgHébergement"
+              src="hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+              alt="Image Hôtel de la mer"
+            />
             <div class="CubeDétailHébergement">
               <h3>Hôtel de la mer</h3>
               <p>Nuit àpartir de 46<strong>€</strong></p>
@@ -177,7 +194,11 @@
             </div>
           </div>
           <div class="CubeHébergement">
-            <div class="ImgHébergement5"></div>
+            <img
+              class="ImgHébergement"
+              src="hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+              alt="Image Auberge Le Panier"
+            />
             <div class="CubeDétailHébergement">
               <h3>Auberge Le Panier</h3>
 
@@ -192,7 +213,11 @@
             </div>
           </div>
           <div class="CubeHébergement">
-            <div class="ImgHébergement6"></div>
+            <img
+              class="ImgHébergement"
+              src="hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+              alt="Image Hôtel chez Amina"
+            />
             <div class="CubeDétailHébergement">
               <h3>Hôtel chez Amina</h3>
 
@@ -217,7 +242,11 @@
         </div>
         <div class="tabpopulaire">
           <div class="CubePopulaire1">
-            <div class="ImgPopulaire1"></div>
+            <img
+              class="ImgPopulaire"
+              src="hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+              alt="Image Hôtel Le soleil du matin"
+            />
             <div class="CubeDétailPopulaire">
               <h3>Hôtel Le solleil du matin</h3>
               <p>Nuit à partir de 128<strong>€</strong></p>
@@ -231,7 +260,11 @@
             </div>
           </div>
           <div class="CubePopulaire1">
-            <div class="ImgPopulaire2"></div>
+            <img
+              class="ImgPopulaire"
+              src="hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+              alt="Image Au coeur de l'eau chambre d'hôtes"
+            />
             <div class="CubeDétailPopulaire">
               <h3>Au Coeur de l'eau Chambre d'hôtes</h3>
               <p>Nuit à partir de 71<strong>€</strong></p>
@@ -245,7 +278,11 @@
             </div>
           </div>
           <div class="CubePopulaire">
-            <div class="ImgPopulaire3"></div>
+            <img
+              class="ImgPopulaire"
+              src="hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+              alt="Image Hôtel Tout bleu et Blanc"
+            />
             <div class="CubeDétailPopulaire">
               <h3>Hôtel Tout bleu et Blanc</h3>
               <p>Nuit à partir de 68<strong>€</strong></p>
@@ -268,23 +305,35 @@
 
       <div class="bloc_activites">
         <div class="tab1">
-          <div class="cubeactivites img1">
-            <div class="imgactivite1"></div>
+          <div class="cubeactivites">
+            <img
+              class="imgactivite"
+              src="activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+              alt="Image activité Vieux port"
+            />
             <div class="hauteurtitre">
               <h3>Vieux port</h3>
             </div>
           </div>
 
-          <div class="bloc_activites1">
+          <div class="bloc_activites1_2">
             <div class="cubeactivites2356">
-              <div class="imgactivite2"></div>
+              <img
+                class="imgactivite2"
+                src="activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                alt="Image activité Fort de pomègues"
+              />
               <div class="hauteurtitre">
                 <h3>Fort de Pomègues</h3>
               </div>
             </div>
 
             <div class="cubeactivites2356">
-              <div class="imgactivite3"></div>
+              <img
+                class="imgactivite3"
+                src="activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                alt="Image activité Îles du Frioul"
+              />
               <div class="hauteurtitre">
                 <h3>Îles du Frioul</h3>
               </div>
@@ -294,22 +343,34 @@
 
         <div class="tab2">
           <div class="cubeactivites">
-            <div class="imgactivite4"></div>
+            <img
+              class="imgactivite"
+              src="activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+              alt="Image activité Parc National des Calanques"
+            />
             <div class="hauteurtitre">
               <h3>Parc National des Calanques</h3>
             </div>
           </div>
 
-          <div class="bloc_activites2">
+          <div class="bloc_activites1_2">
             <div class="cubeactivites2356">
-              <div class="imgactivite5"></div>
+              <img
+                class="imgactivite2"
+                src="activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                alt="Image activité Notre-Dame-De-La-Garde"
+              />
               <div class="hauteurtitre">
                 <h3>Notre-Dame-De-La-Garde</h3>
               </div>
             </div>
 
             <div class="cubeactivites2356">
-              <div class="imgactivite6"></div>
+              <img
+                class="imgactivite3"
+                src="activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                alt="Image activité Parc Longchamp"
+              />
               <div class="hauteurtitre">
                 <h3>Parc Longchamp</h3>
               </div>
