Modification du fichier html

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
             <a class="ColorLien2" href="#Activites">Activités</a>
           </div>
         </div>
-        <button class="LienNavSinscrire s'inscrire" type="button">
-          S'inscrire
-        </button>
+        <a class="LienNavSinscrire" href="#">S'inscrire</a>
       </div>
     </nav>
     <header>
