Modification du fichier html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="ColorLien2" href="#Activites">Activités</a>
           </div>
         </div>
-        <button class="LienNavSinscrire" href="#sinscrire">S'inscrire</button>
+        <button class="LienNavSinscrire">S'inscrire</button>
       </div>
     </nav>
     <header>
