Modification des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
             <a class="ColorLien2" href="#Activites">Activités</a>
           </div>
         </div>
-        <a class="LienNavSinscrire" href="#sinscrire">S'inscrire</a>
+
+        <input
+          class="LienNavSinscrire"
+          type="button"
+          value="S'inscrire"
+          on
+          click="msg()"
+        />
       </div>
     </nav>
     <header>
