Modification des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -42,13 +42,7 @@
           </div>
         </div>
 
-        <input
-          class="LienNavSinscrire"
-          type="button"
-          value="S'inscrire"
-          on
-          click="msg()"
-        />
+        <input class="btn" type="button" value="S'inscrire" on click="(msg)" />
       </div>
     </nav>
     <header>
