--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
         </div>
 
-        <input class="btn" type="button" value="S'inscrire" on click="(msg)" />
+        <input class="btn" type="button" value="S'inscrire" />
       </div>
     </nav>
     <header>
