Modification du fichier html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
           </div>
         </div>
 
-        <input class="btn" type="button" value="S'inscrire" />
+        <input
+          class="btn"
+          type="button"
+          value="S'inscrire"
+          onclick="sinscrire"
+        />
       </div>
     </nav>
     <header>
